--- a/.github/workflows/update-file.yml
+++ b/.github/workflows/update-file.yml
@@ -21,6 +21,6 @@ jobs:
         run: npm install
 
       - name: Run script to update file
-        run: script.js  # ajuste o nome do script conforme necessário
+        run: update-file.js  # ajuste o nome do script conforme necessário
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
